fix: styling issue

--- a/blogs.html
+++ b/blogs.html
@@ -41,7 +41,7 @@
                 <small>Aug 2021</small>
                 <p>In the last article, we discussed mainly the scope of the web dev and knowing about various jargon related to it. This article will focus sharply on tools and steps to start the web development journey. With the rise of the Internet, the developer is gaining decent shape and size (the more, the better), thanks to this advancement we have plenty of tools for exploration. Here we look at them:</p>
 
-                <a class="link link-primary" href="https://some-earth.notion.site/Essentials-tools-to-start-Web-Dev-journey-Part-2-9db0b6105b494c408601c89b523e8330"> Read more</a>
+                <a target="blank" class="link link-primary" href="https://some-earth.notion.site/Essentials-tools-to-start-Web-Dev-journey-Part-2-9db0b6105b494c408601c89b523e8330"> Read more</a>
 
             </div>
         </li>
@@ -52,7 +52,7 @@
                 <small>Aug 2021</small>
                 <p>In the field of Computer Science, there are so many paths that can be explored, and fortunately, they can be rewarding in the form of a full-fledged carrier option. One such example is Web Development, since the inception of the Internet (the 90s onwards) the world has seen a massive shift in terms of everything.</p>
 
-                <a class="blog-link" href="https://some-earth.notion.site/Essentials-Tools-to-start-Web-Dev-journey-Part-1-de0d8f9feac947c4ac59875c0a830cc6">Read More</a>
+                <a target="blank" class="blog-link" href="https://some-earth.notion.site/Essentials-Tools-to-start-Web-Dev-journey-Part-1-de0d8f9feac947c4ac59875c0a830cc6">Read More</a>
 
             </div>
         </li>
@@ -61,14 +61,14 @@
         <div class="footer-header">Social Media Handles</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a  href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github" id="github"></a>
+                <a target="blank"  href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github" id="github"></a>
             </li>
             <li class="list-item-inline">
-                <a  href="https://twitter.com/Samarth019"> <img src="images/twitter.svg" style="width: 30px;" alt="Twitter" id="twitter"></a>
+                <a target="blank"  href="https://twitter.com/Samarth019"> <img src="images/twitter.svg" style="width: 30px;" alt="Twitter" id="twitter"></a>
             </li>
             
             <li class="list-item-inline">
-                <a  href="https://www.linkedin.com/in/samarth-krishna-joshi/"> <img style="width: 30px;" src="images/linkedin.svg" alt="linkedin" id="linkedin"></a>
+                <a target="blank"  href="https://www.linkedin.com/in/samarth-krishna-joshi/"> <img style="width: 30px;" src="images/linkedin.svg" alt="linkedin" id="linkedin"></a>
             </li>
         </ul>
     </footer>
