--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,8 @@
                     selling price of the Stocks as input and tell result whether the user made Profit or loss and
                     Percentage.</p>
 
-                <a class="link link-primary" href="https://harshad-mehta.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Stocks-Profile-Calculator">View
+                <a target="blank"  class="link link-primary" href="https://harshad-mehta.netlify.app/">Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Stocks-Profile-Calculator">View
                     Source</a>
             </div>
         </li>
@@ -57,8 +57,8 @@
                     palindrome or not. If the Birthday is not palindrome it will tell the next nearest date from the
                     Entered BIrthday.</p>
 
-                <a class="link link-primary" href="https://dark-knight-rises.netlify.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Palindrome-Birthday/tree/main">View Source</a>
+                <a target="blank"  class="link link-primary" href="https://dark-knight-rises.netlify.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Palindrome-Birthday/tree/main">View Source</a>
             </div>
         </li>
 
@@ -69,8 +69,8 @@
                 <p>A fun triangle quiz in Vanilla JS. The different Quizzes and activities made the learning aspect of
                     triangle intresting.</p>
 
-                <a class="link link-primary" href="https://triangle-mania.netlify.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Triangle-quiz">View Source</a>  
+                <a target="blank"  class="link link-primary" href="https://triangle-mania.netlify.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Triangle-quiz">View Source</a>  
             </div>
         </li>
 
@@ -81,8 +81,8 @@
                 <p>A simple vanilla JS based app that takes Date of Birth and Lucky number as Input, based on that it
                     tells whether they are or lucky or not.</p>
 
-                <a class="link link-primary" href="https://heavy-driver.netlify.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Lucky-Birthday/tree/main">View Source</a>
+                <a target="blank"  class="link link-primary" href="https://heavy-driver.netlify.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Lucky-Birthday/tree/main">View Source</a>
             </div>
         </li>
 
@@ -93,8 +93,8 @@
                 <p>A simple cash register made in vanilla JS. It takes bill and cash given as input and return minimum
                     no of notes that needs to be returned.</p>
 
-                <a class="link link-primary" href="https://bahikhaata.netlify.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Cash-Register">View Source</a>
+                <a target="blank"  class="link link-primary" href="https://bahikhaata.netlify.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Cash-Register">View Source</a>
             </div>
         </li>
 
@@ -105,8 +105,8 @@
                 <p>Do you read Books? You would find some good recommendations for all the genre. Made using ReactJs
                     with love.</p>
 
-                <a class="link link-primary" href="https://k0j73.csb.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Book-recommendation">View Source</a>
+                <a target="blank"  class="link link-primary" href="https://k0j73.csb.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Book-recommendation">View Source</a>
             </div>
         </li>
 
@@ -117,8 +117,8 @@
                 <p>Do you know your country India very well? What about all its neighbour countries and their Flags.A
                     simple ReactJS based project using useState to show this emoji interpreter.</p>
 
-                <a class="link link-primary" href=" https://j49c0.csb.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Emojipedia">View Source</a>
+                <a target="blank"  class="link link-primary" href=" https://j49c0.csb.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Emojipedia">View Source</a>
             </div>
         </li>
 
@@ -130,8 +130,8 @@
                     many ways was unique to his time. This translator takes English as input and converts to Shakespeare
                     English.</p>
 
-                <a class="link link-primary" href="https://shakespeare-dialect.netlify.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Shakespeare-translation">View Source</a>
+                <a target="blank"  class="link link-primary" href="https://shakespeare-dialect.netlify.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Shakespeare-translation">View Source</a>
             </div>
         </li>
 
@@ -142,8 +142,8 @@
                 <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
                     translator to convert your text from English to Minion speak or Banana language.</p>
 
-                <a class="link link-primary" href="https://minionverse.netlify.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/neog-camp-banana-speak">View Source</a>
+                <a target="blank"  class="link link-primary" href="https://minionverse.netlify.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/neog-camp-banana-speak">View Source</a>
             </div>
         </li>
 
@@ -153,8 +153,8 @@
                 <small>Aug 2021</small>
                 <p>My Portfolio containing all my projects, blogs and link to socials, made using HTML, CSS and JS.</p>
 
-                <a class="link link-primary" href="https://someearth.netlify.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Portfolio">View Source</a>
+                <a target="blank"  class="link link-primary" href="https://someearth.netlify.app/"> Live Project</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Portfolio">View Source</a>
             </div>
         </li>
 
@@ -166,9 +166,9 @@
                 <p>Another <strong>Node JS</strong> CLI app. Built as an assignment in the camp. This checks your
                     knowledge on the very famous Sitcom of all time F.R.I.E.N.D.S .</p>
 
-                <a class="link link-primary"
+                <a target="blank"  class="link link-primary"
                     href="https://replit.com/@SomeEarthJ/Friends-quiz?embed=1&output=1#index.js "> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Quiz-2-FRIENDS">View Source</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/Quiz-2-FRIENDS">View Source</a>
             </div>
         </li>
 
@@ -178,10 +178,10 @@
                 <small>Jul 2021</small>
                 <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>
 
-                <a class="link link-primary"
+                <a target="blank"  class="link link-primary"
                     href="https://replit.com/@SomeEarthJ/How-Well-Do-You-know-Me?embed=1&output=1#index.js"> Live
                     Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/How-Well-Do-You-know-Me">View Source</a>
+                <a target="blank"  class="link link-secondary" href="https://github.com/SomeEarth86/How-Well-Do-You-know-Me">View Source</a>
             </div>
         </li>
 
@@ -191,16 +191,16 @@
         <div class="footer-header">Social Media Handles</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github"
+                <a target="blank" href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github"
                         id="github"></a>
             </li>
             <li class="list-item-inline">
-                <a href="https://twitter.com/Samarth019"> <img src="images/twitter.svg" style="width: 30px;"
+                <a target="blank" href="https://twitter.com/Samarth019"> <img src="images/twitter.svg" style="width: 30px;"
                         alt="Twitter" id="twitter"></a>
             </li>
 
             <li class="list-item-inline">
-                <a href="https://www.linkedin.com/in/samarth-krishna-joshi/"> <img style="width: 30px;"
+                <a target="blank" href="https://www.linkedin.com/in/samarth-krishna-joshi/"> <img style="width: 30px;"
                         src="images/linkedin.svg" alt="linkedin" id="linkedin"></a>
             </li>
         </ul>
